Fix word wrap issue

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+body{
+  margin: 0;
+  padding: 0;
+}
+
 .ui-layout-pane {
   border-width: 0;
 }
@@ -14,8 +19,6 @@
 
 #editor {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  width: 100%;
+  height: 100%;
 }
